--- a/client/templates/client/base.html
+++ b/client/templates/client/base.html
@@ -13,16 +13,16 @@
         <h1> {{ title }}</h1>
     </center>
     <hr />
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-
-        <ul>
-            {% for message in messages %}
-            <li>{{message}}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-    {% endwith %}
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+            {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
+            {{ message }}
+        </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
    
     {% block content %}
     {% endblock %}
