fix mining and urls

--- a/client/templates/client/index.html
+++ b/client/templates/client/index.html
@@ -14,11 +14,10 @@
 </center>
 
 <br>
-<a href="{{node_address}}/mine"><button>Request to mine</button></a>
-<a href="/"><button>Resync</button></a>
+<a href="{{node_address}}/api/mine"><button>Request to mine</button></a>
+<a href="{% url 'client:index' %}"><button>Resync</button></a>
 
 {% if posts|length > 0 %}
-{{ posts }}
 <div style="margin: 20px;">
 	{% for post in posts %}
 	<div class="post_box">
@@ -30,7 +29,7 @@
 		  none repeat scroll 0% 0%; box-shadow: rgb(0, 97, 146) 0px 0px 0px 2px;" class="post_box-avatar">{{
 				post.author|make_list|first }}</div>
 			<div class="name-header">{{ post.author }}</div>
-			<div class="post_box-subtitle"> Posted at <i>ß{{ post.timestamp|date:"F j, Y H:i" }}</i></div>
+			<div class="post_box-subtitle"> Posted at <i>{{ post.timestamp|date:"F j, Y H:i" }}</i></div>
 		</div>
 		<div>
 			<div class="post_box-body">
