--- a/client/templates/client/base.html
+++ b/client/templates/client/base.html
@@ -7,7 +7,7 @@
 <body>
 
     <div>
-        <a href="/index">Home</a>
+        <a href="{% url 'client:index' %}" >Home</a>
     </div>
     <center>
         <h1> {{ title }}</h1>
